--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "e2e": "ng e2e",
     "postinstall": "ng build --aot -prod"
   },
+  "engines": {
+    "node": "6.9.1",
+    "npm": "3.10.8"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
