--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "node app.js",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -31,6 +31,7 @@
     "angular-in-memory-web-api": "~0.3.2",
     "angular4-files-upload": "^1.0.2",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
     "intersection-observer": "^0.5.0",
     "ng-in-viewport": "^1.2.0",
     "ng2-auto-complete": "^0.12.0",
