--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ngui/auto-complete": "^0.16.1",
     "angular-in-memory-web-api": "~0.3.2",
     "angular4-files-upload": "^1.0.2",
+    "auth0-js": "^9.5.1",
     "compression": "^1.7.1",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
