--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@angular/http": "^4.2.4",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
+    "@angular/platform-server": "^6.0.4",
     "@angular/router": "^4.2.4",
     "@ngui/auto-complete": "^0.16.1",
+    "@nguniversal/express-engine": "^6.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "angular-in-memory-web-api": "~0.3.2",
     "angular4-files-upload": "^1.0.2",
     "auth0-js": "^9.5.1",
@@ -41,6 +44,7 @@
     "ngx-order-pipe": "^1.1.1",
     "ngx-pagination": "^3.0.3",
     "rxjs": "^5.4.2",
+    "ts-loader": "^4.4.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
