--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "@nguniversal/express-engine": "^6.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "angular-in-memory-web-api": "~0.3.2",
+    "angular2-universal": "^2.1.0-rc.1",
     "angular4-files-upload": "^1.0.2",
     "auth0-js": "^9.5.1",
+    "body-parser": "^1.18.3",
     "compression": "^1.7.1",
     "core-js": "^2.4.1",
-    "express": "^4.16.2",
+    "express": "^4.16.3",
     "intersection-observer": "^0.5.0",
     "ng-in-viewport": "^1.2.0",
     "ng2-auto-complete": "^0.12.0",
@@ -43,6 +45,7 @@
     "ng2-file-upload": "^1.3.0",
     "ngx-order-pipe": "^1.1.1",
     "ngx-pagination": "^3.0.3",
+    "preboot": "^6.0.0-beta.4",
     "rxjs": "^5.5.2",
     "ts-loader": "^4.4.1",
     "zone.js": "^0.8.14"
