--- a/package.json
+++ b/package.json
@@ -17,20 +17,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/platform-server": "^5.2.11",
-    "@angular/router": "^5.2.0",
+    "@angular/animations": "6.0.4",
+    "@angular/common": "6.0.4",
+    "@angular/compiler": "6.0.4",
+    "@angular/core": "6.0.4",
+    "@angular/forms": "6.0.4",
+    "@angular/http": "6.0.4",
+    "@angular/platform-browser": "6.0.4",
+    "@angular/platform-browser-dynamic": "6.0.4",
+    "@angular/platform-server": "6.0.4",
+    "@angular/router": "6.0.4",
     "@ngui/auto-complete": "^0.16.1",
     "@nguniversal/express-engine": "^6.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
-    "angular-in-memory-web-api": "~0.3.2",
     "angular2-universal": "^2.1.0-rc.1",
     "angular4-files-upload": "^1.0.2",
     "auth0-js": "^9.5.1",
@@ -40,20 +39,18 @@
     "express": "^4.16.3",
     "intersection-observer": "^0.5.0",
     "ng-in-viewport": "^1.2.0",
-    "ng2-auto-complete": "^0.12.0",
-    "ng2-completer": "^1.6.1",
     "ng2-file-upload": "^1.3.0",
     "ngx-order-pipe": "^1.1.1",
     "ngx-pagination": "^3.0.3",
     "preboot": "^6.0.0-beta.4",
-    "rxjs": "^5.5.2",
+    "rxjs": "^6.2.0",
     "ts-loader": "^4.4.1",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.0",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^4.2.4",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "6.0.4",
+    "@angular/language-service": "6.0.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -71,6 +68,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "^2.4.2"
+    "typescript": "2.7.2",
+    "@angular-devkit/build-angular": "~0.6.8"
   }
 }
