--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "intersection-observer": "^0.5.0",
+    "ng-auto-complete": "^2.10.5",
     "ng-in-viewport": "^1.2.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-order-pipe": "^1.1.1",
     "ngx-pagination": "^3.0.3",
     "preboot": "^6.0.0-beta.4",
-    "rxjs": "^6.2.0",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
     "ts-loader": "^4.4.1",
     "zone.js": "^0.8.26"
   },
