--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/node": "~6.0.60",
     "codelyzer": "~3.1.1",
     "gulp": "3.9.1",
+    "gulp-clean-css": "^3.9.4",
     "gulp-sass": "^3.1.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
