--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "6.0.4",
     "@angular/platform-browser-dynamic": "6.0.4",
     "@angular/platform-server": "6.0.4",
+    "@angular/pwa": "^0.6.8",
     "@angular/router": "6.0.4",
     "@ngui/auto-complete": "^0.16.1",
     "@nguniversal/express-engine": "^6.0.0",
@@ -47,7 +48,8 @@
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
     "ts-loader": "^4.4.1",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "@angular/service-worker": "6.0.4"
   },
   "devDependencies": {
     "@angular/cli": "6.0.8",
