--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-server": "6.0.4",
     "@angular/pwa": "^0.6.8",
     "@angular/router": "6.0.4",
+    "@angular/service-worker": "6.0.4",
     "@ngui/auto-complete": "^0.16.1",
     "@nguniversal/express-engine": "^6.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
@@ -35,7 +36,7 @@
     "angular4-files-upload": "^1.0.2",
     "auth0-js": "^9.5.1",
     "body-parser": "^1.18.3",
-    "compression": "^1.7.1",
+    "compression": "^1.7.3",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "intersection-observer": "^0.5.0",
@@ -48,8 +49,7 @@
     "rxjs": "^6.2.2",
     "rxjs-compat": "^6.2.2",
     "ts-loader": "^4.4.1",
-    "zone.js": "^0.8.26",
-    "@angular/service-worker": "6.0.4"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular/cli": "6.0.8",
