--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sipi-app",
-  "description": "Sipi, the urban guide. Built on Angular 4 and Antares back end.",
-  "version": "0.0.0",
+  "description": "Sipi, the urban guide for Central America and the Caribbean. Built on Angular 6.",
+  "version": "4.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -17,22 +17,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.4",
-    "@angular/common": "6.0.4",
-    "@angular/compiler": "6.0.4",
-    "@angular/core": "6.0.4",
-    "@angular/forms": "6.0.4",
-    "@angular/http": "6.0.4",
-    "@angular/platform-browser": "6.0.4",
-    "@angular/platform-browser-dynamic": "6.0.4",
-    "@angular/platform-server": "6.0.4",
+    "@angular/animations": "7.2.4",
+    "@angular/common": "7.2.4",
+    "@angular/compiler": "7.2.4",
+    "@angular/core": "7.2.4",
+    "@angular/forms": "7.2.4",
+    "@angular/http": "7.2.4",
+    "@angular/platform-browser": "7.2.4",
+    "@angular/platform-browser-dynamic": "7.2.4",
+    "@angular/platform-server": "7.2.4",
     "@angular/pwa": "^0.6.8",
-    "@angular/router": "6.0.4",
-    "@angular/service-worker": "6.0.4",
+    "@angular/router": "7.2.4",
+    "@angular/service-worker": "7.2.4",
     "@ngui/auto-complete": "^0.16.1",
     "@nguniversal/express-engine": "^6.0.0",
     "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
-    "angular2-universal": "^2.1.0-rc.1",
     "angular4-files-upload": "^1.0.2",
     "auth0-js": "^9.5.1",
     "body-parser": "^1.18.3",
@@ -40,40 +39,26 @@
     "core-js": "^2.4.1",
     "express": "^4.16.3",
     "intersection-observer": "^0.5.0",
-    "ng-auto-complete": "^2.10.5",
-    "ng-in-viewport": "^1.2.0",
     "ng2-file-upload": "^1.3.0",
     "ngx-order-pipe": "^1.1.1",
     "ngx-pagination": "^3.0.3",
     "preboot": "^6.0.0-beta.4",
-    "rxjs": "^6.2.2",
+    "rxjs": "^6.4.0",
     "rxjs-compat": "^6.2.2",
     "ts-loader": "^4.4.1",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "6.0.4",
-    "@angular/language-service": "6.0.4",
+    "@angular/cli": "7.3.1",
+    "@angular/compiler-cli": "7.2.4",
+    "@angular/language-service": "7.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.1.1",
-    "gulp": "3.9.1",
-    "gulp-clean-css": "^3.9.4",
-    "gulp-sass": "^3.1.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
-    "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "typescript": "3.2.4"
   }
 }
