--- a/package.json
+++ b/package.json
@@ -30,31 +30,32 @@
     "@angular/router": "7.2.4",
     "@angular/service-worker": "7.2.4",
     "@ngui/auto-complete": "^0.16.1",
-    "@nguniversal/express-engine": "^6.0.0",
-    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
+    "@nguniversal/express-engine": "^6.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.1.0",
     "angular4-files-upload": "^1.0.2",
-    "auth0-js": "^9.5.1",
+    "auth0-js": "^9.10.0",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
-    "core-js": "^2.4.1",
-    "express": "^4.16.3",
-    "intersection-observer": "^0.5.0",
+    "core-js": "^2.6.4",
+    "express": "^4.16.4",
+    "intersection-observer": "^0.5.1",
     "ng2-file-upload": "^1.3.0",
     "ngx-order-pipe": "^1.1.1",
-    "ngx-pagination": "^3.0.3",
-    "preboot": "^6.0.0-beta.4",
+    "ngx-pagination": "^3.2.1",
+    "preboot": "^6.0.0",
     "rxjs": "^6.4.0",
-    "rxjs-compat": "^6.2.2",
-    "ts-loader": "^4.4.1",
+    "rxjs-compat": "^6.4.0",
+    "ts-loader": "^4.5.0",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.13.1",
     "@angular/cli": "7.3.1",
     "@angular/compiler-cli": "7.2.4",
     "@angular/language-service": "7.2.4",
     "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^6.0.118",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "ts-node": "~3.2.0",
